[gd_scene load_steps=3 format=3 uid="uid://8ht8vpsb0vl8"]

[ext_resource type="Script" uid="uid://s8j50tfokgis" path="res://Scenes/perks_scene.gd" id="1_xtv0c"]
[ext_resource type="PackedScene" uid="uid://g8g2afkn8gqj" path="res://Perks/perk_tree.tscn" id="2_gruq8"]

[node name="PerksScene" type="ColorRect"]
process_mode = 3
anchors_preset = -1
offset_right = 1148.0
offset_bottom = 647.0
color = Color(0.458824, 0.447059, 0.286275, 1)
script = ExtResource("1_xtv0c")

[node name="PerksTree" parent="." instance=ExtResource("2_gruq8")]
layout_mode = 0
anchors_preset = 0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 448.0
offset_right = 1120.0
offset_bottom = 568.0
text = "Close menu"

[node name="PerkPointsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 68.0
offset_right = 304.0
offset_bottom = 104.0
text = "Perk points text"

[connection signal="perks_changed" from="PerksTree" to="." method="_on_perk_tree_perk_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
